[package]
name = "backuprs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
flate2 = "1.0.28"
tar = "0.4.40"
# Uses customized `mega-rs` when used locally, and uses
# version 0.7.0 from crates.io when published.
# N.B. that if a version doesn't match, Cargo will fail to compile!
mega = { path = "../mega-rs", version = "0.7.0" }
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
serde_json = "1.0.108"
base64 = "0.21.5"
serde = "1.0.193"
log = "0.4.20"
fern = "0.6.2"
thiserror = "1.0.52"
